--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
     </section>
     <section>
       <h2>Biografía</h2>
-      <p>Soy un apasionado programador en búsqueda activa de oportunidades. Con experiencia en HTML, CSS, JavaScript y Python, disfruto de la creación de soluciones innovadoras y amigables para el usuario. Me encanta enfrentar desafíos y aprender constantemente para crecer profesionalmente.</p>
+      <p>Soy autodidacta en tecnología y ferviente apasionado por la programación, busco incansablemente oportunidades para forjar soluciones innovadoras y centradas en el usuario. Mi versatilidad se extiende a lo largo de lenguajes como HTML, CSS, JavaScript y Python, donde canalizo mi creatividad para generar constantes innovaciones. Mis conocimientos sólidos en contabilidad, finanzas, administración, verificación documental y archivo complementan mi enfoque tecnológico. Mi destreza en Microsoft Office, Notion y Trello garantiza una gestión eficiente y estructurada. Me caracterizo como un individuo responsable, honesto y dinámico, con un arraigado sentido de pertenencia y una proactividad innata que me permite adaptarme con agilidad a los cambios.</p>
+    </section>
+
+    <section>
+      <h2>Resumen de Competencias</h2>
+      <ul>
+        <li>Conocimiento en áreas administrativas y habilidades en el manejo de herramientas ágiles.</li>
+        <li>Familiaridad con Excel intermedio para análisis y presentación de datos.</li>
+        <li>Competencia en el uso de herramientas de gestión como Notion y Trello para la organización y seguimiento de proyectos.</li>
+        <li>Experiencia en archivo físico, documental, demostrando habilidades de organización y atención al detalle.</li>
+        <li>Alto sentido de responsabilidad y compromiso con la calidad del trabajo.</li>
+        <li>Excelente habilidad para establecer y mantener relaciones interpersonales efectivas.</li>
+        <li>Capacidad demostrada para trabajar de manera colaborativa y contribuir positivamente en equipos.</li>
+        <li>Facilidad de expresión verbal, escrita, demostrando claridad y precisión en la comunicación.</li>
+        <li>Proactividad, disciplina para asumir responsabilidades y cumplir plazos establecidos.</li>
+        <li>Habilidad en la organización de tareas y gestión eficiente del tiempo.</li>
+      </ul>
     </section>
     
     <section>
