--- a/index.html
+++ b/index.html
@@ -47,7 +47,18 @@
     
     <section>
       <h2>Habilidades</h2>
-      <p>Lista tus habilidades clave, como lenguajes de programación, herramientas, metodologías, etc.</p>
+      <ul>
+        <li>Desarrollo web: HTML, CSS, JavaScript, Python</li>
+        <li>Competencia en áreas administrativas y gestión ágil</li>
+        <li>Dominio de herramientas como Microsoft Office, Excel, Notion y Trello</li>
+        <li>Experiencia en gestión documental y archivo físico</li>
+        <li>Responsabilidad y compromiso con altos estándares de calidad en el trabajo</li>
+        <li>Habilidades interpersonales efectivas para relaciones sólidas</li>
+        <li>Trabajo colaborativo y contribución positiva en equipos multidisciplinarios</li>
+        <li>Comunicación clara y precisa, tanto verbal como escrita</li>
+        <li>Proactividad y cumplimiento eficaz de plazos establecidos</li>
+        <li>Organización eficiente del tiempo y tareas</li>
+      </ul>
     </section>
     
     <section>
