--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <section>
       <h2>Proyectos Destacados</h2>
-      <p>Aquí puedes enumerar algunos de tus proyectos más notables o enlaces a ellos.</p>
+      <a href="https://github.com/calsifer10" target="_blank">github.calsifer10</a>
     </section>
     
     <section>
